--- a/index.html
+++ b/index.html
@@ -218,11 +218,16 @@
 									<img src="image/userinfo/${a.innerText.toLowerCase()}.png">
 								</div>
 								<div class="linkinput">
-									<h5 id="linknametitle">${a.innerText} - </h5>
-									<input id="title" class="inputtitle" readonly="true" value="${(name.value=="@yourname") ? "@yourtitle" : name.value}" maxlength="40" size="18" onfocusout="inputtitlefocusout(this)" onkeyup="inputKeyUp(event,this)"></input>
-									<i class="fas fa-pencil" onclick="edit(this)"></i><br>
+									<div class="linknametitle-wrap">
+										<h5 id="linknametitle">${a.innerText}&nbsp;-&nbsp;</h5>
+										<input id="title" class="inputtitle" readonly="true" value="${(name.value=="@yourname") ? "@yourtitle" : name.value}" maxlength="40" size="18" onfocusout="inputtitlefocusout(this)" onkeyup="inputKeyUp(event,this)"></input>
+									</div>
+									<i class="fas fa-pencil" onclick="editinputtitle(this)"></i>
 									<input id="link" readonly="true" value="http://${a.innerText.toLowerCase()}.com/@yourlink" size="39" onfocusout="inputlinkfocusout(this)" onkeyup="inputKeyUp(event,this)"></input>
-									<i class="fas fa-pencil" onclick="edit(this)"></i></div><div class="linktrash"><i class="fas fa-trash" onclick="clicktrash(this)"></i>
+									<i class="fas fa-pencil" onclick="editinputlink(this)"></i>
+								</div>
+								<div class="linktrash">
+									<i class="fas fa-trash" onclick="clicktrash(this)"></i>
 								</div>
 								<div class="yesno">
 									<i class="fas fa-check" id="yes" onclick="removelink(this)"></i>
