--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
 			</div>
 		</div>
 		<div id="uploadavatar">
-			<p>Upload your avatar here</p>
+			<i class="far fa-hand-point-left"></i><p>Upload your avatar here</p>
 		</div>
 		<div id="changename">
 			<p>Click here to edit your name</p>
 		</div>
-		<div onclick="nextoaddlink()" id="nexttoaddlink">Next</div>
+		<div onclick="nextoaddlink()" id="nexttoaddlink">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="addlink">
 			<p>Click here to add your link</p>
 		</div>
