--- a/index.html
+++ b/index.html
@@ -294,23 +294,20 @@
 			<i class="far fa-hand-point-left"></i><p>Upload your avatar here</p>
 		</div>
 		<div id="changename">
-			<p>Click here to edit your name</p>
+			<i class="far fa-hand-point-left"></i><p>Click here to edit your name</p>
 		</div>
 		<div onclick="nextoaddlink()" id="nexttoaddlink">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="addlink">
-			<p>Click here to add your link</p>
+			<i class="far fa-hand-point-left"></i><p>Click here and choose to add your link</p>
 		</div>
-		<div id="chooselink">
-			<p>Choose your link here</p>
-		</div>
-		<div onclick="nexttolinkcontainer()" id="nexttolinkcontainer">Next</div>
+		<div onclick="nexttolinkcontainer()" id="nexttolinkcontainer">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="edittitle">
-			<p>Click here to edit your title</p>
+			<i class="far fa-hand-point-left"></i><p>Click here to edit your title</p>
 		</div>
 		<div id="editlink">
-			<p>Click here to edit your link</p>
+			<i class="far fa-hand-point-left"></i><p>Click here to edit your link</p>
 		</div>
-		<div onclick="done()" id="done">Done</div>
+		<div onclick="done()" id="done">Done&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 	</div>
 	
 </body>
