--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 		</div>
 		<div onclick="nextoaddlink()" id="nexttoaddlink">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="addlink">
-			<i class="far fa-hand-point-left"></i><p>Click here and choose to add your link</p>
+			<i class="far fa-hand-point-left"></i><p>Click here to add your link</p>
 		</div>
 		<div onclick="nexttolinkcontainer()" id="nexttolinkcontainer">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="edittitle">
