--- a/index.html
+++ b/index.html
@@ -293,19 +293,37 @@
 		<div id="uploadavatar">
 			<i class="far fa-hand-point-left"></i><p>Upload your avatar here</p>
 		</div>
+		<div id="uploadavatar-responsive">
+			<p>Upload your avatar here</p><i class="far fa-hand-point-right"></i>
+		</div>
 		<div id="changename">
 			<i class="far fa-hand-point-left"></i><p>Click here to edit your name</p>
+		</div>
+		<div id="changename-responsive">
+			<p>Click here to edit your name</p><i class="far fa-hand-point-right"></i>
 		</div>
 		<div onclick="nextoaddlink()" id="nexttoaddlink">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="addlink">
 			<i class="far fa-hand-point-left"></i><p>Click here to add your link</p>
 		</div>
+		<div id="addlink-responsive">
+			<p>Click here to add your link</p><i class="far fa-hand-point-down"></i>
+		</div>
 		<div onclick="nexttolinkcontainer()" id="nexttolinkcontainer">Next&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 		<div id="edittitle">
 			<i class="far fa-hand-point-left"></i><p>Click here to edit your title</p>
 		</div>
+		<div id="edittitle-responsive">
+			<p>Click here to edit your title</p><i class="far fa-hand-point-right"></i>
+		</div>
+		<div id="editlink-responsive">
+			<p>Click here to edit your link</p><i class="far fa-hand-point-right"></i>
+		</div>
 		<div id="editlink">
 			<i class="far fa-hand-point-left"></i><p>Click here to edit your link</p>
+		</div>
+		<div id="preview">
+			<p>Preview your info on phone</p><i class="far fa-hand-point-down"></i>
 		</div>
 		<div onclick="done()" id="done">Done&nbsp;&nbsp;<i class="fas fa-chevron-circle-right"></i></div>
 	</div>
